fixed button alignment for all screens

--- a/src/styles/initial/Global.css
+++ b/src/styles/initial/Global.css
@@ -18,7 +18,7 @@
 }
 
 .headerBackButton {
-    margin-left: 32px;
+    margin-left: 30px;
     margin-top: 26px;
     background-color: transparent;
     background-repeat: no-repeat;
